[package]
name = "hocg-deck-convert"
version = "0.2.5"
authors = ["Qrimpuff <qrimpuff@gmail.com>"]
publish = false
license = "MIT"
edition = "2024"

[dependencies]
hocg-fan-sim-assets-model = { git = "https://github.com/Qrimpuff/hocg-fan-sim-assets" }

base64 = "0.22.1"
futures = "0.3.31"
gloo = "0.11.0"
icu = "2.0.0"
image = { version = "0.25.2", features = ["png", "webp"] }
indexmap = { version = "2.5.0", features = ["serde"] }
itertools = "0.14.0"
printpdf = { version = "0.8.0", features = ["png"] }
reqwest = { version = "0.13.1", features = ["json", "gzip", "brotli", "deflate"] }
serde = "1.0"
serde_json = "1.0"
unicode-normalization = "0.1.24"
wana_kana = "4.0.0"
wasm-bindgen = { version = "0.2.95", features = ["serde"] }
web-sys = { version = "0.3.70", features = ["Navigator", "Screen"] }
web-time = "1.1.0"
dioxus = { version = "0.7.0", features = ["web", "router"] }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
