[package]
name = "hocg-deck-convert"
version = "0.2.8"
authors = ["Qrimpuff <qrimpuff@gmail.com>"]
publish = false
license = "MIT"
edition = "2024"

[dependencies]
hocg-fan-sim-assets-model = { git = "https://github.com/Qrimpuff/hocg-fan-sim-assets" }

base64 = "0.22.1"
dioxus = { version = "0.7.3", features = ["web", "router"] }
futures = "0.3.31"
gloo = "0.11.0"
icu = "2.1.1"
image = { version = "0.25.9", features = ["png", "webp"] }
indexmap = { version = "2.13.0", features = ["serde"] }
itertools = "0.14.0"
jiff = { version = "0.2.18", features = ["js", "serde"] }
printpdf = { version = "0.8.2", features = ["png"] }
reqwest = { version = "0.13.1", features = [
    "json",
    "gzip",
    "brotli",
    "deflate",
] }
serde = "1.0.228"
serde_json = "1.0.149"
unicode-normalization = "0.1.25"
uuid = { version = "1.20.0", features = ["js", "v4", "v7"] }
wana_kana = "4.0.0"
wasm-bindgen = { version = "0.2.108", features = ["serde"] }
web-sys = { version = "0.3.85", features = ["Navigator", "Screen"] }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
