[package]
name = "hocg-deck-convert"
version = "1.3.0"
authors = ["Qrimpuff <qrimpuff@gmail.com>"]
publish = false
license = "MIT"
edition = "2024"

[dependencies]
hocg-fan-sim-assets-model = { git = "https://github.com/Qrimpuff/hocg-fan-sim-assets" }
hocg-fan-sim-prices-model = { git = "https://github.com/Qrimpuff/hocg-fan-sim-prices" }

base64 = "0.22.1"
bitflags = "2.11.1"
dioxus = { version = "0.7.5", features = ["web", "router"] }
dioxus-sdk-time = "0.7.0"
futures = "0.3.32"
gloo = "0.12.0"
icu = "2.2.0"
image = { version = "0.25.10", features = ["png", "webp"] }
imageproc = "0.27.0"
indexmap = { version = "2.14.0", features = ["serde"] }
itertools = "0.14.0"
js-sys = "0.3.95"
jiff = { version = "0.2.23", features = ["js", "serde"] }
printpdf = { version = "0.9.1", default-features = false, features = ["png"] }
regex = "1.12.3"
reqwest = { version = "0.13.4", features = [
    "json",
    "gzip",
    "brotli",
    "deflate",
] }
rexie = "0.6.2"
serde = "1.0.228"
serde_json = "1.0.149"
serde-wasm-bindgen = "0.6.5"
unicode-normalization = "0.1.25"
uuid = { version = "1.23.1", features = ["js", "v4", "v7"] }
wana_kana = "5.0.0"
wasm-bindgen = { version = "0.2.118", features = ["serde"] }
web-sys = { version = "0.3.95", features = [
    "Navigator",
    "Screen",
    "Window",
    "MediaQueryList",
] }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
